--- a/src/util.styl
+++ b/src/util.styl
@@ -26,7 +26,7 @@ for n in 3 4 5 6
         radius2 n 0 0 n
 
 // padding
-for n in 2 4 6 8 10 12 14 16 18 20
+for n in 0 2 4 6 8 10 12 14 16 18 20
     .tP{n}
         padding n
     .tPT{n}
@@ -39,7 +39,7 @@ for n in 2 4 6 8 10 12 14 16 18 20
         padding-left n
 
 // margin 
-for n in 2 4 6 8 10 12 14 16 18 20
+for n in 0 2 4 6 8 10 12 14 16 18 20
     .tM{n}
         margin n
     .tMT{n}
