fix tRx direction for radius

--- a/src/util.styl
+++ b/src/util.styl
@@ -17,13 +17,13 @@ for n in 3 4 5 6
     .tR{n}
         radius n
     .tRT{n}
-        radius2 n n 0 0
+        radiusT n
     .tRR{n}
-        radius2 0 n n 0
+        radiusR n
     .tRB{n}
-        radius2 0 0 n n
+        radiusB n
     .tRL{n}
-        radius2 n 0 0 n
+        radiusL n
 
 // padding
 for n in 0 2 4 6 8 10 12 14 16 18 20 30
