--- a/src/var.styl
+++ b/src/var.styl
@@ -35,7 +35,7 @@ radiusB(n)
     border-bottom-left-radius u(n)
     overflow hidden
 
-border-box()
+borderBox()
     -webkit-box-sizing border-box
     box-sizing border-box
 
@@ -54,43 +54,41 @@ omit(n)
         word-break keep-all
         white-space nowrap
 
-padding(n) 
+paddingAll(n) 
     padding u(n)
         
-padding-top(n) 
+paddingTop(n) 
     padding-top u(n)
     
-padding-right(n) 
+paddingRight(n) 
     padding-right u(n)
     
-padding-bottom(n) 
+paddingBottom(n) 
     padding-bottom u(n)
 
-padding-left(n) 
+paddingLeft(n) 
     padding-left u(n)
     
-margin(n) 
+marginAll(n) 
     margin u(n)
         
-margin-top(n) 
+marginTop(n) 
     margin-top u(n)
 
-margin-right(n) 
+marginRight(n) 
     margin-right u(n)
     
-margin-bottom(n) 
+marginBottom(n) 
     margin-bottom u(n)
     
-margin-left(n) 
+marginLeft(n) 
     margin-left u(n)
     
-font-size(n) 
+fontSize(n) 
     font-size u(n)
     
-width(n) 
+w(n) 
     width u(n)
 
-height(n) 
+h(n) 
     height u(n)
-
-
