--- a/src/var.styl
+++ b/src/var.styl
@@ -1,4 +1,4 @@
-u(n) 
+u(n)
     n == 0 ? n : unit(n, px);
 
 // http://border-radius.com/
@@ -6,21 +6,21 @@ radius(n)
     -webkit-border-radius u(n)
     border-radius u(n)
     overflow hidden
-    
+
 radiusL(n)
     -webkit-border-top-left-radius u(n)
     -webkit-border-bottom-left-radius u(n)
     border-top-left-radius u(n)
     border-bottom-left-radius u(n)
     overflow hidden
-    
+
 radiusT(n)
     -webkit-border-top-left-radius u(n)
     -webkit-border-top-right-radius u(n)
     border-top-left-radius u(n)
     border-top-right-radius u(n)
     overflow hidden
-    
+
 radiusR(n)
     -webkit-border-top-right-radius u(n)
     -webkit-border-bottom-right-radius u(n)
@@ -54,41 +54,47 @@ omit(n)
         word-break keep-all
         white-space nowrap
 
-paddingAll(n) 
+paddingAll(n)
     padding u(n)
-        
-paddingTop(n) 
+
+paddingTop(n)
     padding-top u(n)
-    
-paddingRight(n) 
+
+paddingRight(n)
     padding-right u(n)
-    
-paddingBottom(n) 
+
+paddingBottom(n)
     padding-bottom u(n)
 
-paddingLeft(n) 
+paddingLeft(n)
     padding-left u(n)
-    
-marginAll(n) 
+
+marginAll(n)
     margin u(n)
-        
-marginTop(n) 
+
+marginTop(n)
     margin-top u(n)
 
-marginRight(n) 
+marginRight(n)
     margin-right u(n)
-    
-marginBottom(n) 
+
+marginBottom(n)
     margin-bottom u(n)
-    
-marginLeft(n) 
+
+marginLeft(n)
     margin-left u(n)
-    
-fontSize(n) 
+
+fontSize(n)
     font-size u(n)
-    
-w(n) 
+
+w(n)
     width u(n)
 
-h(n) 
+h(n)
     height u(n)
+
+rem(n)
+    if artBoardWidth is defined
+        unit(n * 10 / artBoardWidth, 'rem')
+    else
+        unit(n * 10 / 750, 'rem')
