更新到最新版。

--- a/src/util.styl
+++ b/src/util.styl
@@ -88,8 +88,8 @@ line-heights = {
     '1_8': 1.8,
     '1_9': 1.9,
     '2':   2,
-    '30':  30px,
-    '44':  44px
+    '30':  rem(60),
+    '44':  rem(88)
 }
 for key, value in line-heights
     .tLH{key}
