add doc & version 0.1.0

--- a/src/flexbox.css
+++ b/src/flexbox.css
@@ -37,12 +37,12 @@
   justify-content: center;
 }
 .tFBJE {
-  -webkit-box-pack: end;
+  -webkit-box-pack: end /*待验证 是否要删除*/;
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
 .tFBJ {
-  -webkit-box-pack: justify;
+  -webkit-box-pack: justify /*待验证 是否要删除*/;
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
