--- a/src/util.css
+++ b/src/util.css
@@ -673,10 +673,10 @@
   line-height: 2;
 }
 .tLH30 {
-  line-height: 30px;
+  line-height: 0.8rem;
 }
 .tLH44 {
-  line-height: 44px;
+  line-height: 1.173333333333333rem;
 }
 .tLH1_3 {
   line-height: 1.3;
